@@ -3,6 +3,7 @@ package br.com.lett.crawlernode.crawlers.ranking.keywords.colombia;
 import br.com.lett.crawlernode.core.fetcher.models.Request;
 import br.com.lett.crawlernode.core.session.Session;
 import br.com.lett.crawlernode.core.task.impl.CrawlerRankingKeywords;
+import br.com.lett.crawlernode.exceptions.ApiResponseException;
 import br.com.lett.crawlernode.util.CommonMethods;
 import br.com.lett.crawlernode.util.CrawlerUtils;
 import br.com.lett.crawlernode.util.JSONUtils;
@@ -10,16 +11,16 @@ import br.com.lett.crawlernode.util.Logging;
 import org.json.JSONArray;
 import org.json.JSONObject;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Base64;
 
 public class ColombiaExitoCrawler extends CrawlerRankingKeywords {
 
    private static final Integer API_VERSION = 1;
-   private static final String SENDER = "vtex.search@0.x";
-   private static final String PROVIDER = "vtex.search@0.x";
-   private String keySHA256 = "ab6840a1cadd874965fd737f2568bf4c3648944cd343e3da94db8e8e650dd5c2";
+   private static final String SENDER = "vtex.store-resources@0.x";
+   private static final String PROVIDER = "vtex.search-graphql@0.x";
+   private static final String keySHA256 = "e1d5228ca8b18d1f83b777d849747a7f55c9597f670f20c8557d2b0428bf6be7";
 
    public ColombiaExitoCrawler(Session session) {
       super(session);
@@ -35,20 +36,26 @@ public class ColombiaExitoCrawler extends CrawlerRankingKeywords {
 
    protected String createVariablesBase64() {
       JSONObject search = new JSONObject();
-      search.put("count", "20");
-      search.put("sort", "");
-      search.put("attributePath", "");
-      search.put("page", this.currentPage);
-      search.put("productOriginVtex", "VTEX");
-      search.put("indexingType", "API");
-      search.put("query", keywordEncoded);
-      search.put("leap", false);
+      search.put("hideUnavailableItems", true);
+      search.put("skusFilter", "ALL_AVAILABLE");
+      search.put("simulationBehavior", "default");
+      search.put("installmentCriteria", "MAX_WITHOUT_INTEREST");
+      search.put("productOriginVtex", false);
+      search.put("map", "ft");
+      search.put("query", this.keywordWithoutAccents.replace(" ", "%20"));
+      search.put("orderBy", "OrderByScoreDESC");
+      search.put("from", arrayProducts.size());
+      search.put("to", arrayProducts.size() + 20);
+      search.put("facetsBehavior", "dynamic");
+      search.put("categoryTreeBehavior", "default");
+      search.put("withFacets", false);
+      search.put("fullText", this.keywordWithoutAccents);
 
       return Base64.getEncoder().encodeToString(search.toString().getBytes());
    }
 
    protected JSONObject fetchSearchApi() {
-      JSONObject searchApi;
+      JSONObject searchApi = new JSONObject();
       StringBuilder url = new StringBuilder();
       url.append(getHomePage() + "_v/segment/graphql/v1?");
 
@@ -56,7 +63,7 @@ public class ColombiaExitoCrawler extends CrawlerRankingKeywords {
       JSONObject persistedQuery = new JSONObject();
 
       persistedQuery.put("version", API_VERSION);
-      persistedQuery.put("sha256Hash", this.keySHA256);
+      persistedQuery.put("sha256Hash", keySHA256);
       persistedQuery.put("sender", SENDER);
       persistedQuery.put("provider", PROVIDER);
 
@@ -69,13 +76,9 @@ public class ColombiaExitoCrawler extends CrawlerRankingKeywords {
       payload.append("&appsEtag=remove");
       payload.append("&domain=store");
       payload.append("&locale=es-CO");
-      payload.append("&operationName=searchResult");
-      try {
-         payload.append("&variables=" + URLEncoder.encode("{}", "UTF-8"));
-         payload.append("&extensions=" + URLEncoder.encode(extensions.toString(), "UTF-8"));
-      } catch (UnsupportedEncodingException e) {
-         Logging.printLogError(logger, session, CommonMethods.getStackTrace(e));
-      }
+      payload.append("&operationName=productSearchV3");
+      payload.append("&variables=" + URLEncoder.encode("{}", StandardCharsets.UTF_8));
+      payload.append("&extensions=" + URLEncoder.encode(extensions.toString(), StandardCharsets.UTF_8));
       url.append(payload);
 
       log("Link onde são feitos os crawlers:" + url);
@@ -87,8 +90,15 @@ public class ColombiaExitoCrawler extends CrawlerRankingKeywords {
          .build();
 
       JSONObject response = CrawlerUtils.stringToJson(this.dataFetcher.get(session, request).getBody());
-
-      searchApi = JSONUtils.getValueRecursive(response, "data.searchResult", JSONObject.class, new JSONObject());
+      try {
+         if (!response.has("errors")) {
+            searchApi = JSONUtils.getValueRecursive(response, "data.productSearch", JSONObject.class, new JSONObject());
+         } else {
+            throw new ApiResponseException(response.toString());
+         }
+      } catch (Exception ex) {
+         Logging.printLogError(logger, session, CommonMethods.getStackTrace(ex));
+      }
 
       return searchApi;
    }
@@ -134,5 +144,10 @@ public class ColombiaExitoCrawler extends CrawlerRankingKeywords {
    protected void setTotalProducts(JSONObject data) {
       this.totalProducts = CrawlerUtils.getIntegerValueFromJSON(data, "total", 0);
       this.log("Total da busca: " + this.totalProducts);
+   }
+
+   @Override
+   protected boolean hasNextPage(){
+      return true;
    }
 }
